FEAT-3980 Subscription End Date Notification FEAT-4585 Create new MetraNet UI page that shows all notifications
Code reviewer: dgaz

--- a/App_GlobalResources/MainMenu.fr.resx
+++ b/App_GlobalResources/MainMenu.fr.resx
@@ -678,4 +678,7 @@
   <data name="TEXT_SEARCH" xml:space="preserve">
     <value>Recherche</value>
   </data>
+  <data name="TEXT_NOTIFICATIONS" xml:space="preserve">
+    <value>{FR}Notifications</value>
+  </data>    
 </root>
