--- a/App_GlobalResources/MainMenu.ja.resx
+++ b/App_GlobalResources/MainMenu.ja.resx
@@ -678,4 +678,7 @@
   <data name="TEXT_SEARCH" xml:space="preserve">
     <value>[JA]Search</value>
   </data>
+  <data name="TEXT_NOTIFICATIONS" xml:space="preserve">
+    <value>{JA}Notifications</value>
+  </data>    
 </root>
