--- a/Reporting/App_LocalResources/RevRecReport.aspx.ja.resx
+++ b/Reporting/App_LocalResources/RevRecReport.aspx.ja.resx
@@ -118,15 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>Deferred Revenue Summary Report</value>
+    <value>[JA]Deferred Revenue Summary Report</value>
   </data>
   <data name="Option_All_Text" xml:space="preserve">
-    <value>All</value>
+    <value>[JA]All</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>MetraNet - Deferred Revenue Summary Report</value>
+    <value>[JA]MetraNet - Deferred Revenue Summary Report</value>
   </data>
   <data name="REPORT_TITLE" xml:space="preserve">
-    <value>Deferred Revenue Summary Report</value>
+    <value>[JA]Deferred Revenue Summary Report</value>
   </data>
 </root>
