--- a/Localization/Global/GlobalResources.resx
+++ b/Localization/Global/GlobalResources.resx
@@ -861,6 +861,9 @@
   <data name="ACS_PROP_WAS_NOT_FOUND" xml:space="preserve">
     <value>Property '{0}' was not found.</value>
   </data>
+  <data name="ACS_VIEW_MODIFICATION_FAILED" xml:space="preserve">
+    <value>Fail to modify views of Account ID {0}.</value>
+  </data>
   <data name="ACS_SUB_WAS_CREATED" xml:space="preserve">
     <value>Account was subscribed to '{0}'.</value>
   </data>
