FEAT-4774 [DEV] Check "Manage System User Reports" capability when System Reports display page is loaded

--- a/App_GlobalResources/ErrorMessages.en-GB.resx
+++ b/App_GlobalResources/ErrorMessages.en-GB.resx
@@ -306,4 +306,7 @@
   <data name="ERROR_PO_EXISTS" xml:space="preserve">
     <value>Name of product offering must be unique</value>
   </data>
+  <data name="ERROR_ACCESS_DENIED_INSUFFICIENT_CAPABILITY" xml:space="preserve">
+    <value>Access denied, insufficient capability</value>
+  </data>
 </root>
