--- a/App_GlobalResources/ErrorMessages.de.resx
+++ b/App_GlobalResources/ErrorMessages.de.resx
@@ -306,4 +306,7 @@
   <data name="ERROR_PO_EXISTS" xml:space="preserve">
     <value>[DE]Name of product offering must be unique</value>
   </data>
+  <data name="ERROR_ACCESS_DENIED_INSUFFICIENT_CAPABILITY" xml:space="preserve">
+    <value>[DE]Access denied, insufficient capability</value>
+  </data>
 </root>
