--- a/Reporting/App_LocalResources/ReportsTree.aspx.ja.resx
+++ b/Reporting/App_LocalResources/ReportsTree.aspx.ja.resx
@@ -123,4 +123,7 @@
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
     <value>[JA]Reports</value>
   </data>
+  <data name="MTPanel1Resource1.Text" xml:space="preserve">
+    <value>[JA]List of Reports</value>
+  </data>
 </root>
