CORE-8569  Localization: 'Pending Changes', 'Failed Changes' and 'All Changes' pages (under 'Approvals' left hand menu section) contain unnecessary 'Change Details' table (FR localization)

--- a/App_GlobalResources/JSConsts.fr.resx
+++ b/App_GlobalResources/JSConsts.fr.resx
@@ -799,7 +799,7 @@
         <value>Effacer des membres du groupe</value>
     </data>
     <data name="TEXT_GROUP_SUBSCRIPTION_UNSUBSCRIBE_MEMBERS" xml:space="preserve">
-        <value>Désabonner des membres de l'abonnement de groupe</value>
+        <value>Désabonner des membres de l’abonnement de groupe</value>
     </data>
     <data name="TEXT_GROUP_SUBSCRIPTION_UPDATE_MEMBERS" xml:space="preserve">
         <value>Mettre à jour les membres du groupe</value>
