--- a/Localization/Global/GlobalResources.pt-br.resx
+++ b/Localization/Global/GlobalResources.pt-br.resx
@@ -120,6 +120,7 @@
   <data name="ACOUNT_STATE_WAS" xml:space="preserve">
     <value>O estado da conta era {0}, foi alterado para {1}. </value>
   </data>
+
   <data name="ACS_VALIDATION_AvailableEndDateGreateThanEndDateInPo" xml:space="preserve">
     <value>[pt-br]Unable to subscribe '{0}' product offering to account configuration set  due to subscription parameter EndDate '{1}' greater than available EndDate '{2}' of product offering.</value>
   </data>
@@ -138,6 +139,9 @@
   <data name="ACS_VALIDATION_CurrentAccIsPartitionUnableToSubscribePoFromOtherPartition" xml:space="preserve">
     <value>[pt-br]'{0}' Product Offering is not available for the '{1}' Partition account with id='{2}'. The IdPartition='{3}' of Product Offering is different to IdPartition='{4}' of Partition account.</value>
   </data>
+    <data name="ACS_VALIDATION_ExceptionWhileRetrievingPoWithId" xml:space="preserve">
+        <value>[pt-br] Exception occured while retrieving Product with Id='{0}'. Exception : {1}</value>
+    </data>
   <data name="ACS_VALIDATION_IdPartitionCorporateAccIsNotTheSameAsPo" xml:space="preserve">
     <value>[pt-br]ID Partition for Corporate Account with ID = '{0}' Is no the same as for '{1}' product offering. The ID Partition for Account = '{2}', but for product offering = '{3}'</value>
   </data>
@@ -159,6 +163,9 @@
   <data name="ACS_VALIDATION_SelectionCriteriaHasDuplicates" xml:space="preserve">
     <value>[pt-br] The Selection Criteria with Account View '{0}' and name '{1}'  is found more the one time (count = {2}). The Selection Criteria should be unique.</value>
   </data>
+    <data name="ACS_VALIDATION_UDRCMetricsNotSet" xml:space="preserve">
+        <value>[pt-br]UDRC for PI ID={0} not set!</value>
+    </data>
   <data name="ACS_VALIDATION_UDRCStartDateGreaterThanEndDateForPiWithId" xml:space="preserve">
     <value>[pt-br]StartDate={0} of UDRC metric can't be greater than EndDate={1} for PI with id={2}</value>
   </data>
@@ -189,6 +196,9 @@
   <data name="ACS_VALIDATION_ValidationFormat_Messgae_Component" xml:space="preserve">
     <value>[pt-br]#{0}) Message: '{1}', Component: '{2}'</value>
   </data>
+    <data name="ACS_VIEW_MODIFICATION_FAILED" xml:space="preserve">
+        <value>[pt-br]Fail to modify views of Account ID {0}.</value>
+    </data>
   <data name="ADD_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
     <value>[pt-br]Error on saving AccountConfigSet with Id {0}</value>
   </data>
@@ -219,6 +229,9 @@
   <data name="ANCESTOR_ACOUNT_WAS" xml:space="preserve">
     <value>A conta ancestral era {0}, foi alterada para {1}. </value>
   </data>
+    <data name="APPLY_ACCOUNTCONFIGSETS_EXCEPTION" xml:space="preserve">
+        <value>[pt-br]Error on applying Account Configuration Sets for account {0}.</value>
+    </data>
   <data name="BAD_TRANSACTION_TYPE" xml:space="preserve">
     <value>A transação {0} é do tipo {1}, mas foi obtido uma AlreadySettledException</value>
   </data>
@@ -309,6 +322,9 @@
   <data name="GET_ACCOUNTCONFIGSETAPPLIED_LIST_EXCEPTION" xml:space="preserve">
     <value>[pt-br]Error get account configuration set applied list</value>
   </data>
+    <data name="GET_OTHER_PARTITION_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
+        <value>[pt-br] Can't get account config set with PO from another partition!</value>
+    </data>
   <data name="GOT_NO_RESPONSE" xml:space="preserve">
     <value>Sem resposta de {0}.</value>
   </data>
@@ -393,6 +409,9 @@
   <data name="TEMPLATE_ID_LESS_THAN_0" xml:space="preserve">
     <value>ID do modelo de contrato não pode ser menor que 0.</value>
   </data>
+    <data name="TERMINATE_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
+        <value>[pt-br]Error on termination Account Configuration Set</value>
+    </data>
   <data name="TEXT_ACCOUNT_CANNOT_BE_OWN_BILL_MANAGER" xml:space="preserve">
     <value>A conta não pode ser seu próprio gerenciador de fatura</value>
   </data>
@@ -738,9 +757,6 @@
   <data name="TEXT_UNABLE_TO_RETRIEVE_SPEC" xml:space="preserve">
     <value>Não é possível recuperar característica de especificação do sistema.</value>
   </data>
-  <data name="ACS_VALIDATION_UDRCMetricsNotSet" xml:space="preserve">
-    <value>[pt-br]UDRC for PI ID={0} not set!</value>
-  </data>
   <data name="TEXT_UNKOWN_EXCEPTION" xml:space="preserve">
     <value>Ocorreu uma exceção </value>
   </data>
@@ -782,9 +798,6 @@
   </data>
   <data name="TX_ALREADY_SUBMITTED" xml:space="preserve">
     <value>A transação {0} já foi enviada.</value>
-  </data>
-  <data name="TERMINATE_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
-    <value>[pt-br]Error on termination Account Configuration Set</value>
   </data>
   <data name="UPDATE_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
     <value>[pt-br]Error update account configuration set</value>
@@ -874,10 +887,10 @@
     <value>[pt-br]Fail to modify views of Account ID {0}.</value>
   </data>
   <data name="ACS_SUB_WAS_CREATED" xml:space="preserve">
-    <value>[pt-br]Account was subscribed to '{0}'.</value>
+    <value>[pt-br]Account with ID '{0}' was subscribed to '{1}' Product Offering.</value>
   </data>
   <data name="ACS_SUB_WAS_NOT_CREATED" xml:space="preserve">
-    <value>[pt-br]Unable to subscribe account to '{0}'. Exception: {1}</value>
+    <value>[pt-br]Unable to subscribe account with ID '{0}' to Product Offering with ID '{1}'. Exception: {2}</value>
   </data>
   <data name="ACS_SUB_WAS_NOT_TERMINATED" xml:space="preserve">
     <value>[pt-br]Unable to terminated subscription with ID {0}. Exception: {1}</value>
@@ -894,4 +907,22 @@
   <data name="APPLY_ACCOUNTCONFIGSETS_EXCEPTION" xml:space="preserve">
     <value>[pt-br]Error on applying Account Configuration Sets for account {0}.</value>
   </data>
+<data name="ACS_GROUP_SUB_DESCRIPTION" xml:space="preserve">
+        <value>[pt-br] Group subscription was created by AccountConfigSetParams idAcsParams='{0}', ProductOffering id='{1}'</value>
+    </data>
+    <data name="ACS_GROUP_SUB_MEMBER_WAS_ADDED" xml:space="preserve">
+        <value>[pt-br] Member with ID '{0}' was adeed to '{1}' GroupSubscription with ID '{2}'</value>
+    </data>
+    <data name="ACS_GROUP_SUB_MEMBER_WAS_NOT_ADDED_DUETO_GROUP_SUN_NOT_EXISTED" xml:space="preserve">
+        <value>[pt-br] Unable to add member with ID '{0}', because GroupSubscription is not existed for Corporate Account with ID '{1}'</value>
+    </data>
+    <data name="ACS_GROUP_SUB_MEMBER_WAS_NOT_ADDED_EXCEPTION" xml:space="preserve">
+        <value>[pt-br] Unable to add member with ID '{0}' to '{1}' GroupSubscription with ID '{2}'. Exception: {3}</value>
+    </data>
+    <data name="ACS_GROUP_SUB_WAS_CREATED" xml:space="preserve">
+        <value>[pt-br] {0}' GroupSubscription was created for Corporate Account with ID '{1}' and subscribed to '{2}' Product Offering</value>
+    </data>
+    <data name="ACS_GROUP_SUB_WAS_NOT_CREATED" xml:space="preserve">
+        <value>[pt-br] Unable to create GroupSubscription for Corporate Account with ID '{0}' and subscribed to '{1}' Product Offering. Exception: {2} </value>
+    </data>
 </root>
