FeaturesFEAT-3980 Subscription End Date Notification FEAT-4725
Handle creation of notification event templates

--- a/App_GlobalResources/JSConsts.it.resx
+++ b/App_GlobalResources/JSConsts.it.resx
@@ -1326,4 +1326,8 @@
   <data name="TEXT_NOTIFICATIONS" xml:space="preserve">
     <value>{IT}Notifications</value>
   </data>
+  <data name="TEXT_MORE" xml:space="preserve">
+    <value>[IT]More ...</value>
+  </data>
+
 </root>
