--- a/App_GlobalResources/JSConsts.de.resx
+++ b/App_GlobalResources/JSConsts.de.resx
@@ -1326,4 +1326,8 @@
   <data name="TEXT_NOTIFICATIONS" xml:space="preserve">
     <value>{DE}Notifications</value>
   </data>
+  <data name="TEXT_MORE" xml:space="preserve">
+    <value>[DE]More ...</value>
+  </data>
+
 </root>
