--- a/App_GlobalResources/JSConsts.fr.resx
+++ b/App_GlobalResources/JSConsts.fr.resx
@@ -1326,4 +1326,8 @@
   <data name="TEXT_NOTIFICATIONS" xml:space="preserve">
     <value>{FR}Notifications</value>
   </data>
+  <data name="TEXT_MORE" xml:space="preserve">
+    <value>[fr]More ...</value>
+  </data>
+
 </root>
