--- a/App_GlobalResources/JSConsts.pt-br.resx
+++ b/App_GlobalResources/JSConsts.pt-br.resx
@@ -1326,4 +1326,8 @@
   <data name="TEXT_NOTIFICATIONS" xml:space="preserve">
     <value>{pt-BR}Notifications</value>
   </data>
+  <data name="TEXT_MORE" xml:space="preserve">
+    <value>[pt-BR]More ...</value>
+  </data>
+
 </root>
